--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -13,8 +13,7 @@
   <tbody>
     <% @articles.each do |article| %>
       <tr>
-        <td><%= article.name %></td>
-        <td><%= link_to 'Show', article %></td>
+        <td><%= link_to article.name, article %></td>
         <td><%= link_to 'Edit', edit_article_path(article) %></td>
         <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
