added sort, dynamically named pages, hid admin buttons, added links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>JoJoy</title>
+    <title>JoJoy: <%= yield(:title)%> Techniques</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
