--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,26 +1,38 @@
 <p id="notice"><%= notice %></p>
+<% content_for :title, "The Big List of Happiness" %>
 
-<h1>Techniques</h1>
+  <h1>The Big List of Happiness Techniques</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @articles.each do |article| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= link_to article.name, article %></td>
-        <td><%= link_to 'Edit', edit_article_path(article) %></td>
-        <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th align="left">Name</th>
+        <th colspan="3"></th>
+        <th align="right">
+          <div class="btn-group">
+            <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Sort
+            </button>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="../sort_articles/positive psychology">Positive Psychology</a>
+              <a class="dropdown-item" href="../sort_articles/stoicism">Philosophy</a><br/>
+              <a class="dropdown-item" href="../sort_articles/folk">Folk</a>
+            </div>
+          </div>
+        </th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @articles.each do |article| %>
+        <tr>
+          <td><%= link_to article.name, article %></td>
+          <td><%#= link_to 'Edit', edit_article_path(article) %></td>
+          <td><%#= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Article', new_article_path %>
+  <br>
+  <%#= link_to 'New Article', new_article_path %>
