added devise and admin model, filtered admin methods, edited tags and sort categories, added new techniques, updated new article view

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -13,17 +13,17 @@
 
   <div class="field">
     <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, size: "50x2" %>
   </div>
 
   <div class="field">
-    <%= form.label :body %>
-    <%= form.text_area :body %>
+    <%= form.label :steps %>
+    <%= form.text_area :body, size: "70x20" %>
   </div>
 
   <div class="field">
     <%= form.label :tags %>
-    <%= form.text_field :tags %>
+    <%= form.text_field :tags, size: "50x2" %>
   </div>
 
   <div class="actions">
