--- a/app/views/articles/sorted_tags.html.erb
+++ b/app/views/articles/sorted_tags.html.erb
@@ -18,8 +18,8 @@ end  %>
           Sort
         </button>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="../sort_articles/positive psychology">Positive Psychology</a>
-          <a class="dropdown-item" href="../sort_articles/stoicism">Philosophy</a><br/>
+          <a class="dropdown-item" href="../sort_articles/science">Science</a><br/>
+          <a class="dropdown-item" href="../sort_articles/philosophy">Philosophy</a><br/>
           <a class="dropdown-item" href="../sort_articles/folk">Folk</a>
         </div>
       </div></th>
@@ -38,7 +38,7 @@ end  %>
 </table>
 
 <br>
-<td><%= link_to 'Back', root_path %> </td>
+<td><%= link_to 'Back', :back %> </td>
 
 
 <%#= link_to 'New Article', new_article_path %>
