switched from sqlite3 to postgresql

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -13,7 +13,8 @@
 
 <p>
   <strong>Tags:</strong>
-  <%= @article.tags %>
+  <% tags = @article.tags %>
+  <%= tags %>
 </p>
 
 <% if current_admin %>
