--- a/app/views/articles/sorted_tags.html.erb
+++ b/app/views/articles/sorted_tags.html.erb
@@ -39,6 +39,7 @@ end  %>
 
 <br>
 <td><%= link_to 'Back', :back %> </td>
+<%= link_to 'Home', root_path %>
 
 
 <%#= link_to 'New Article', new_article_path %>
