--- a/app/views/articles/sorted_tags.html.erb
+++ b/app/views/articles/sorted_tags.html.erb
@@ -27,6 +27,7 @@ end  %>
   </thead>
 
   <tbody>
+    <% @articles = @articles.sort {|a,b| a.name <=> b.name} %>
     <% @articles.each do |article| %>
       <tr>
         <td><%= link_to article.name, article %></td>
